cluster1/k8s/resources/namespaces/dev/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-deny-all
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress: []
